[package]
name = "btree"
version = "0.1.0"
edition = "2021"
categories = ["data-structures"]
keywords = ["btree", "map", "set", "slab"]
description = "A memory compact Slab-based B-tree implementation"

[features]
default = ["std-slab"]
dot = []
std-slab = ["slab", "cc-traits/slab"]

[dependencies]
smallvec = "1.8.0"
cc-traits = "0.8.1"
slab = { version = "0.4.5", optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
