[package]
name = "btree"
version = "0.1.0"
edition = "2021"
categories = ["data-structures"]
keywords = ["btree", "map", "set", "slab"]
description = "A memory compact Slab-based B-tree implementation"
readme = "README.md"

[features]
default = ["std-slab"]
dot = []
std-slab = ["slab", "cc-traits/slab"]

[dependencies]
smallvec = { version = "1.10.0", features = ["serde"] }
cc-traits = { version = "1.0.0" }
slab = { version = "0.4.5", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
serde_json = "1.0"
