[package]
name = "range_tree"
version = "0.1.0"
edition = "2021"

categories = ["data-structures"]
keywords = ["btree", "range", "map", "set"]
description = "B-tree range map implementation"
readme = "README.md"

[features]
default = ["std-slab"]
std-slab = ["slab", "cc-traits/slab"]

[dependencies]
btree = { path = "../btree" }
cc-traits = { version = "1.0.0" }
slab = { version = "0.4.5", features = ["serde"], optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
range-traits = "0.3.0"